Fixed header not overlapping images

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -38,6 +38,7 @@ header {
     border-color: #cccccc;
     width: 100%;
     padding: 0;
+    z-index: 3;
 
 }
 
